--- a/spa-demo/flask-spa/templates/index.html
+++ b/spa-demo/flask-spa/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FLASK SPA</title>
+    <title>Flask SPA</title>
     <style>
       .page {
         display: none;
@@ -18,36 +18,47 @@
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
-      <a href="#services">Services</a>
       <a href="#contact">Contact</a>
+      <a href="#services">Services</a>
     </nav>
 
-    <div class="page" id="page-home"></div>
-    <div class="page" id="page-about"></div>
-    <div class="page" id="page-services"></div>
-    <div class="page" id="page-contact"></div>
+    <div class="page" id="cool-home"></div>
+    <div class="page" id="cool-about"></div>
+    <div class="page" id="cool-contact"></div>
+    <div class="page" id="cool-services"></div>
 
     <script>
       function showActivePage() {
+        // step 1: what page to display
         let activePage = location.hash.slice(1);
-        if (activePage == '') activePage = 'home';
+        activePage = activePage || 'home';
 
-        document.querySelectorAll('.page').forEach(page => {
-          page.classList.remove('active');
-        });
+        // step 2: hide last active page
+        let $lastActivePageDiv = document.querySelector('.page.active');
+        if ($lastActivePageDiv != null) {
+          $lastActivePageDiv.classList.remove('active');
+        }
 
-        document.querySelector(`#page-${activePage}`).classList.add('active');
+        // step 3: show active page
+        let $activePageDiv = document.querySelector(`#cool-${activePage}`);
+        $activePageDiv.classList.add('active');
 
-        fetch(`/api/${activePage}`)
-          .then(response => response.text())
-          .then(data => console.log(data));
+        if ($activePageDiv.innerHTML === '') {
+          // step 4: fetch content from api
+          fetch(`/api/${activePage}`)
+            .then(response => response.text())
+            .then(html => {
+              // step 5: append content to active div
+              $activePageDiv.innerHTML = html;
+            });
+        }
       }
 
       window.addEventListener('hashchange', () => {
-        showActivePage(); // every time hash changes
+        showActivePage();
       });
 
-      showActivePage(); // initially when pages loads
+      showActivePage();
     </script>
   </body>
 </html>
