--- a/end-term/csp/templates/index.html
+++ b/end-term/csp/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://unpkg.com/vue@2"></script>
+    <link rel="stylesheet" href="/static/style.css" />
     <style>
       body {
         background-color: orange;
